syntax = "proto3";
option java_multiple_files = true;
package ds.assignment.trading.grpc.generated;

message CreateOrderRequest {
  string orderId = 1;
  string symbol = 2;
  double price = 3;
  string type = 4;
  int32 quantity = 5;
  bool isSentByPrimary = 6;
}

message CreateOrderResponse {
  bool status = 1;
}

service CreateOrderService {
  rpc createOrder(CreateOrderRequest) returns (CreateOrderResponse);
}